Basic functionality of the game ready

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,6 @@ The quiz consists of 15 questions. First question is worth 100€ and the last 1
 <p>
 <p>
 <p>
-<a href="/quiz">Start quiz</a>
+<a href="/quiz/start">Start quiz</a>
 
  
