--- a/templates/result.html
+++ b/templates/result.html
@@ -1,10 +1,13 @@
+{% extends "layout.html" %}
+{% block content %}
+
 {% if answer == correct %}
 <form action = "/quiz" method="POST">
 <p>
 
     Well done! Your answer is correct!
     <p>
-    Money in the bank: {{ amount }}
+    Money in the bank: <b>{{ amount }}</b>
     <p>
     <input type="hidden" name="index" value= "{{ index }}">
     <input type="submit" name="Next question" value= "Next question">
@@ -14,10 +17,12 @@
 <p>
 Incorrect! The correct answer was {{ correct }}.
 <p>
-You made {{ amount2 }}
+You are eliminated! You made <b>{{ amount2 }}</b>.
 <p>
 <a href="/">Back to homepage</a>
 </p>
 
 
 {% endif %}
+
+{% endblock %}
