--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -1,11 +1,13 @@
 {% extends "layout.html" %}
 {% block content %}
 
+<div class="content"></div>
 <form action="/review", method="POST">
 <textarea name="comment" rows="3" cols="40" maxlength="1000" required></textarea>    
 <p>
 <input type="submit" value="Send">
 </p>
 </form>
+</div>
 
 {% endblock %}
