--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,6 +3,8 @@
 <meta name='viewport' content='width=device-width, initial-scale=1'>
 
 <title>Who Wants To Be a Millionaire?</title>
-<h1>Who Wants To Be a Millionaire?</h1>
+<div class="header-text">
+    <h1>Who Wants To Be a Millionaire?</h1>
+</div>
 <hr>
 {% block content %}{% endblock %}
