--- a/templates/questions.html
+++ b/templates/questions.html
@@ -1,19 +1,21 @@
 {% extends "layout.html" %}
 {% block content %}
 
-{% if session.user_id %}
-You are logged in as <b>{{ session.user_name }}</b>. <a href="/logout">Log out</a>
-{% else %}
-You are not logged in <a href="/login">Log in</a>
-{% endif %}
-<p>
-<a href="/">Back to homepage</a>
-<p>
-<h2>{{ amount }} question</h2>
 
+<p>
+<div class="question">
+<h2>{{ amount[0] }}€ question</h2>
+</div>
+<div class="content">
+    {% if session.user_id %}
+    You are logged in as <b>{{ session.user_name }}</b>. <a href="/logout">Log out</a>
+    {% else %}
+    You are not logged in <a href="/login">Log in</a>
+    {% endif %}
+    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<a href="/">Back to homepage</a>
 {%if random == 1%}
 <form action="/result" method="POST">
-    <h4>{{ question }}</h4>
+    <h3>{{ question }}</h3>
     <p>
     Answer:
     <p>
@@ -75,6 +77,7 @@ You are not logged in <a href="/login">Log in</a>
 {% endif %}
 <p>
 <p>
+<div class="money">
 1. 100€ <br>
 2. 300€ <br>
 3. 500€ <br>
@@ -90,11 +93,11 @@ You are not logged in <a href="/login">Log in</a>
 13. 60 000€ <br>
 14. 200 000€ <br>
 15. 1 000 000€ <br>
-
+</div>
 <h3>Millionaires so far:</h3>
 {% for m in millionaires %}
-{{ m[0] }}
-<hr>
+{{ m[0] }}<br>
 {% endfor %}
+</div>
 
 {% endblock %}
