--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,7 @@
+{% extends "layout.html" %}
 {% block content %}
 
+<div class="content">
 <h2>Registration</h2>
 
 <form action="/register" method="post">
@@ -14,5 +16,6 @@ Password again: <br><input type="password" name="password2">
 
 <p>
 <a href="/login">Go back</a>
+</div>
 
 {% endblock %}
