--- a/templates/questions.html
+++ b/templates/questions.html
@@ -12,7 +12,8 @@
     {% else %}
     You are not logged in <a href="/login">Log in</a>
     {% endif %}
-    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<a href="/">Back to homepage</a>
+    <p>
+    <a href="/">Back to homepage</a>
 {%if random == 1%}
 <form action="/result" method="POST">
     <h3>{{ question }}</h3>
@@ -78,22 +79,22 @@
 <p>
 <p>
 <div class="money">
-1. 100€ <br>
-2. 300€ <br>
-3. 500€ <br>
-4. 700€ <br>
-5. 1000€ <br>
-6. 2000€ <br>
-7. 3000€ <br>
-8. 5000€ <br>
-9. 7000€ <br>
-10. 10 000€ <br>
-11. 15 000€ <br>
-12. 30 000€ <br>
-13. 60 000€ <br>
-14. 200 000€ <br>
-15. 1 000 000€ <br>
-</div>
+<h3>Prize money</h3>
+<b>1.</b> 100€ <br>
+<b>2.</b> 300€ <br>
+<b>3.</b> 500€ <br>
+<b>4.</b> 700€ <br>
+<b>5.</b> 1000€ <br>
+<b>6.</b> 2000€ <br>
+<b>7.</b> 3000€ <br>
+<b>8.</b> 5000€ <br>
+<b>9.</b> 7000€ <br>
+<b>10.</b> 10 000€ <br>
+<b>11.</b> 15 000€ <br>
+<b>12.</b> 30 000€ <br>
+<b>13.</b> 60 000€ <br>
+<b>14.</b> 200 000€ <br>
+<b>15.</b> 1 000 000€ <br>
 <h3>Millionaires so far:</h3>
 {% for m in millionaires %}
 {{ m[0] }}<br>
